<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bubbles Party</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="infinite_mode">Infinite mode</string>
    <string name="classic_mode">Classic mode</string>
    <string name="quit">Quit</string>
    <string name="version_name">version name</string>
    
    <!-- Slide : Titres des jeux -->
    <string name="game1">Splash Bubbles</string>
    
    <!-- Option -->
	<string name="about">About</string>
	
	<!-- Activité About -->
	<string name="about_title">About this software :</string>
	<string name="about_name">Name : Bubbles Party</string>
	<string name="about_autor">Author : CGTeam</string>
	<string name="about_version">Version :</string>
	<string name="about_join">Join us :</string>
	
	<!--  Activité GamePlay -->
	<string name="btn_back">Back</string>
	<string name="btn_play">Play</string>
	<string name="btn_HighScore">High scores</string>
	<string name="gameplay_title">Title</string>
	
	<!-- Activité HighScore -->
	<string name="position">Position</string>
	<string name="score">Score</string>
	
	<string name="test">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
	
</resources>
