<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context="com.cgteam.bubblesparty.menu.MainMenu" >
    
    <LinearLayout
        android:id="@+id/menu_main_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
        
		    <ImageView
		            android:id="@+id/menu_header"
		            android:layout_width="fill_parent"
		            android:layout_height="0dp"
		            android:layout_weight="0.30"
		            android:background="@drawable/menu_header" 
		            android:adjustViewBounds="true"
		    />
		    
		    <RelativeLayout
		        android:id="@+id/menu_support_main_content_container"
		        android:layout_width="fill_parent"
		        android:layout_height="0dp"
		        android:layout_weight="0.50" >
		        
				<LinearLayout
			        android:id="@+id/menu_support_content_container"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_marginLeft="20dp"
			        android:layout_marginRight="20dp"
			        android:layout_marginTop="20dp"
			        android:background="@drawable/menu_game_selection"
			        android:gravity="center"
			        android:orientation="vertical" >
			        
			        <LinearLayout
			            android:id="@+id/menu_content_container"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginBottom="15dp"
			            android:layout_marginLeft="15dp"
			            android:layout_marginRight="15dp"
			            android:layout_marginTop="22dp"
			            android:background="@drawable/menu_background_container"
			            android:gravity="center"
			            android:orientation="vertical"
			            android:paddingBottom="10dp"
			            android:paddingLeft="10dp"
			            android:paddingRight="10dp"
			            android:paddingTop="10dp" >
			            
			            <ViewFlipper
					        android:id="@+id/slideGame"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content" >
					
					        <!-- Jeu 1 -->
					        <LinearLayout
					            android:id="@+id/layoutCLassicMode"
					            android:layout_width="fill_parent"
					            android:layout_height="fill_parent"
					            android:gravity="center"
					            android:orientation="vertical" >
					
					            <!-- Title game 1 : Splash Bubbles -->
					
					            <TextView
					                android:id="@+id/titleClassicMode"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:text="@string/classic_mode"
					                android:textColor="#FFFFFF"
					                android:textSize="20sp"
					                android:layout_marginBottom="10dp"
					                android:textStyle="bold" />
					            
					            <Button
							        android:id="@+id/AccessClassicMode"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							        android:background="@drawable/menu_slide_img_not_found"
							        android:textColor="#FFFFFF"
							        android:textSize="25sp" />
					
					        </LinearLayout>
					
					        <!-- Jeu 2 -->
					        <LinearLayout
					            android:id="@+id/layoutInfiniteMode"
					            android:layout_width="fill_parent"
					            android:layout_height="fill_parent"
					            android:gravity="center"
					            android:orientation="vertical" >
					
					            <!-- Title game 2 -->
					
					            <TextView
					                android:id="@+id/titleInfiniteMode"
					                android:layout_width="wrap_content"
					                android:layout_height="wrap_content"
					                android:text="@string/infinite_mode"
					                android:textColor="#FFFFFF"
					                android:textSize="20sp"
					                android:layout_marginBottom="10dp"
					                android:textStyle="bold" />
					            
					            <Button
							        android:id="@+id/AccessInfiniteMode"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							        android:background="@drawable/menu_slide_img_not_found"
							        android:textColor="#FFFFFF"
							        android:textSize="25sp" />
					
					        </LinearLayout>
					    </ViewFlipper>
		            
			    	</LinearLayout>
		            
			    </LinearLayout>
			    
				<!-- Bouton droite du slide -->
			    <Button
			        android:id="@+id/buttonRightSlide"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:layout_centerHorizontal="false"
			        android:layout_centerVertical="true"
			        android:background="@drawable/btn_menu_slide_right" />
			
			    <!-- Bouton gauche du slide -->
			    <Button
			        android:id="@+id/buttonLeftSlide"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_centerVertical="true"
			        android:background="@drawable/btn_menu_slide_left" />
	        		        
		    </RelativeLayout>
		    
		     <LinearLayout
		         android:id="@+id/menu_bottom_container"
		         android:layout_width="fill_parent"
		         android:layout_height="0dp"
		         android:layout_weight="0.20"
		         android:orientation="vertical"
		         android:paddingBottom="20dp"
		         android:paddingTop="20dp" >
	            
		         <Button
		             android:id="@+id/buttonQuit"
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:layout_gravity="center"
		             android:background="@drawable/btn_custom"
		             android:onClick="quit"
		             android:text="@string/quit"
		             android:textColor="#FFFFFF"
		             android:textSize="25sp"
		             android:paddingRight="20dp"
                	 android:paddingLeft="20dp" />
	            
		    </LinearLayout>
        
 	</LinearLayout>
 	
    <TextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/version_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />
   
</RelativeLayout>
